logs/validate.20260408-011539.log
Mode: isolate
Isolate: including Chap37 Chap45 Chap18 Chap19 Chap23 Chap06 Chap05 Chap02 Chap58 Chap59 Chap56 Chap57
error[E0422]: cannot find struct, variant or union type `by` in this scope
   --> src/Chap59/JohnsonMtEphI64.rs:461:13
    |
461 |             by {};
    |             ^^ not found in this scope

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0422`.
Elapsed: 9s
Sampled Memory Usage: peak rust_verify RSS: 4562MB, peak z3 RSS: 377MB, min free: 20796MB
Sampled CPU Usage: rust_verify: 108s, z3 children: 91s
